--- a/loopstructural/gui/modelling/modelling_widget.ui
+++ b/loopstructural/gui/modelling/modelling_widget.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>948</width>
-    <height>1263</height>
+    <width>921</width>
+    <height>1257</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,7 +19,7 @@
      <x>10</x>
      <y>10</y>
      <width>611</width>
-     <height>711</height>
+     <height>751</height>
     </rect>
    </property>
    <property name="currentIndex">
@@ -35,7 +35,7 @@
        <x>10</x>
        <y>10</y>
        <width>591</width>
-       <height>701</height>
+       <height>671</height>
       </rect>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_6">
@@ -54,9 +54,9 @@
             <widget class="QWidget" name="formLayoutWidget">
              <property name="geometry">
               <rect>
-               <x>10</x>
+               <x>0</x>
                <y>20</y>
-               <width>551</width>
+               <width>581</width>
                <height>161</height>
               </rect>
              </property>
@@ -149,6 +149,16 @@
                 </property>
                </widget>
               </item>
+              <item row="5" column="0">
+               <widget class="QLabel" name="cRSLabel">
+                <property name="text">
+                 <string>CRS</string>
+                </property>
+               </widget>
+              </item>
+              <item row="5" column="1">
+               <widget class="QComboBox" name="cRSComboBox"/>
+              </item>
              </layout>
             </widget>
            </widget>
@@ -165,10 +175,10 @@
             <widget class="QWidget" name="formLayoutWidget_2">
              <property name="geometry">
               <rect>
-               <x>10</x>
+               <x>0</x>
                <y>20</y>
-               <width>551</width>
-               <height>191</height>
+               <width>591</width>
+               <height>201</height>
               </rect>
              </property>
              <layout class="QFormLayout" name="formLayout_3">
@@ -299,10 +309,10 @@
             <widget class="QWidget" name="formLayoutWidget_3">
              <property name="geometry">
               <rect>
-               <x>10</x>
+               <x>0</x>
                <y>20</y>
-               <width>551</width>
-               <height>176</height>
+               <width>591</width>
+               <height>181</height>
               </rect>
              </property>
              <layout class="QFormLayout" name="formLayout_4">
@@ -367,7 +377,7 @@
    </widget>
    <widget class="QWidget" name="tab_3">
     <attribute name="title">
-     <string>Model Setup</string>
+     <string>Geological History</string>
     </attribute>
     <widget class="QWidget" name="verticalLayoutWidget">
      <property name="geometry">
@@ -391,7 +401,7 @@
             <rect>
              <x>0</x>
              <y>30</y>
-             <width>581</width>
+             <width>591</width>
              <height>281</height>
             </rect>
            </property>
@@ -429,9 +439,9 @@
           <widget class="QWidget" name="verticalLayoutWidget_12">
            <property name="geometry">
             <rect>
-             <x>10</x>
+             <x>0</x>
              <y>20</y>
-             <width>571</width>
+             <width>591</width>
              <height>291</height>
             </rect>
            </property>
@@ -655,7 +665,7 @@
    </widget>
    <widget class="QWidget" name="tab_4">
     <attribute name="title">
-     <string>Model</string>
+     <string>Model Setup</string>
     </attribute>
     <widget class="QWidget" name="verticalLayoutWidget_13">
      <property name="geometry">
@@ -670,37 +680,126 @@
       <item>
        <layout class="QVBoxLayout" name="verticalLayout_17">
         <item>
+         <widget class="QPushButton" name="initModel">
+          <property name="text">
+           <string>Initialise Model</string>
+          </property>
+         </widget>
+        </item>
+        <item>
          <widget class="QGroupBox" name="groupBox_8">
           <property name="title">
-           <string>GroupBox</string>
+           <string>Interpolation Parameters</string>
           </property>
           <widget class="QWidget" name="verticalLayoutWidget_15">
            <property name="geometry">
             <rect>
-             <x>9</x>
+             <x>-1</x>
              <y>19</y>
-             <width>571</width>
-             <height>90</height>
+             <width>591</width>
+             <height>241</height>
             </rect>
            </property>
            <layout class="QVBoxLayout" name="verticalLayout_18">
             <item>
-             <widget class="QPushButton" name="initModel">
-              <property name="text">
-               <string>Initialise Model</string>
-              </property>
-             </widget>
+             <widget class="QListWidget" name="modelList"/>
             </item>
             <item>
-             <widget class="QPushButton" name="runModelButton">
-              <property name="text">
-               <string>Run</string>
+             <spacer name="featureProperties">
+              <property name="orientation">
+               <enum>Qt::Vertical</enum>
               </property>
-             </widget>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>20</width>
+                <height>40</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+            <item>
+             <layout class="QFormLayout" name="formLayout_6">
+              <item row="0" column="0">
+               <widget class="QLabel" name="numberOfElementsLabel">
+                <property name="text">
+                 <string>Number of elements</string>
+                </property>
+               </widget>
+              </item>
+              <item row="0" column="1">
+               <widget class="QSpinBox" name="numberOfElementsSpinBox">
+                <property name="maximum">
+                 <number>10000000</number>
+                </property>
+               </widget>
+              </item>
+              <item row="1" column="0">
+               <widget class="QLabel" name="valuePointWeightLabel">
+                <property name="text">
+                 <string>Value point weight</string>
+                </property>
+               </widget>
+              </item>
+              <item row="2" column="0">
+               <widget class="QLabel" name="normPointWeightLabel">
+                <property name="text">
+                 <string>Norm point weight</string>
+                </property>
+               </widget>
+              </item>
+              <item row="3" column="0">
+               <widget class="QLabel" name="regularisationLabel">
+                <property name="text">
+                 <string>Regularisation</string>
+                </property>
+               </widget>
+              </item>
+              <item row="3" column="1">
+               <widget class="QDoubleSpinBox" name="regularisationSpin">
+                <property name="maximum">
+                 <double>50.000000000000000</double>
+                </property>
+               </widget>
+              </item>
+              <item row="2" column="1">
+               <widget class="QDoubleSpinBox" name="npwSpin"/>
+              </item>
+              <item row="1" column="1">
+               <widget class="QDoubleSpinBox" name="cpwSpin"/>
+              </item>
+             </layout>
             </item>
            </layout>
           </widget>
          </widget>
+        </item>
+        <item>
+         <layout class="QVBoxLayout" name="verticalLayout_10">
+          <item>
+           <widget class="QGroupBox" name="groupBox_9">
+            <property name="title">
+             <string>Fault Network</string>
+            </property>
+            <widget class="QTableView" name="faultNetworkTable">
+             <property name="geometry">
+              <rect>
+               <x>0</x>
+               <y>21</y>
+               <width>591</width>
+               <height>281</height>
+              </rect>
+             </property>
+            </widget>
+           </widget>
+          </item>
+          <item>
+           <widget class="QPushButton" name="runModelButton">
+            <property name="text">
+             <string>Run</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
         </item>
        </layout>
       </item>
@@ -908,8 +1007,8 @@
               <rect>
                <x>10</x>
                <y>20</y>
-               <width>611</width>
-               <height>378</height>
+               <width>561</width>
+               <height>251</height>
               </rect>
              </property>
              <layout class="QFormLayout" name="formLayout">
