--- a/loopstructural/gui/modelling/modelling_widget.ui
+++ b/loopstructural/gui/modelling/modelling_widget.ui
@@ -22,8 +22,11 @@
      <height>751</height>
     </rect>
    </property>
+   <property name="focusPolicy">
+    <enum>Qt::WheelFocus</enum>
+   </property>
    <property name="currentIndex">
-    <number>0</number>
+    <number>2</number>
    </property>
    <widget class="QWidget" name="tab">
     <attribute name="title">
@@ -663,6 +666,61 @@
      </layout>
     </widget>
    </widget>
+   <widget class="QWidget" name="tab_17">
+    <attribute name="title">
+     <string>Topology</string>
+    </attribute>
+    <widget class="QWidget" name="verticalLayoutWidget_4">
+     <property name="geometry">
+      <rect>
+       <x>0</x>
+       <y>10</y>
+       <width>591</width>
+       <height>711</height>
+      </rect>
+     </property>
+     <layout class="QVBoxLayout" name="verticalLayout_22">
+      <item>
+       <layout class="QVBoxLayout" name="verticalLayout_23">
+        <item>
+         <widget class="QGroupBox" name="groupBox_9">
+          <property name="title">
+           <string>Fault-Fault </string>
+          </property>
+          <widget class="QTableWidget" name="faultNetworkTable">
+           <property name="geometry">
+            <rect>
+             <x>0</x>
+             <y>20</y>
+             <width>571</width>
+             <height>271</height>
+            </rect>
+           </property>
+          </widget>
+         </widget>
+        </item>
+       </layout>
+      </item>
+      <item>
+       <widget class="QGroupBox" name="groupBox_10">
+        <property name="title">
+         <string>Fault-Stratigraphy</string>
+        </property>
+        <widget class="QTableWidget" name="faultStratigraphyTable">
+         <property name="geometry">
+          <rect>
+           <x>0</x>
+           <y>20</y>
+           <width>571</width>
+           <height>311</height>
+          </rect>
+         </property>
+        </widget>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </widget>
    <widget class="QWidget" name="tab_4">
     <attribute name="title">
      <string>Model Setup</string>
@@ -775,23 +833,6 @@
         </item>
         <item>
          <layout class="QVBoxLayout" name="verticalLayout_10">
-          <item>
-           <widget class="QGroupBox" name="groupBox_9">
-            <property name="title">
-             <string>Fault Network</string>
-            </property>
-            <widget class="QTableView" name="faultNetworkTable">
-             <property name="geometry">
-              <rect>
-               <x>0</x>
-               <y>21</y>
-               <width>591</width>
-               <height>281</height>
-              </rect>
-             </property>
-            </widget>
-           </widget>
-          </item>
           <item>
            <widget class="QPushButton" name="runModelButton">
             <property name="text">
